<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/active_probing_tunnel_category" />

    <SwitchPreferenceCompat
        android:key="pref_active_probing_tunnel_enabled"
        android:title="@string/active_probing_tunnel_title"
        android:summary="@string/active_probing_tunnel_summary"
        android:defaultValue="false" />

    <androidx.preference.DropDownPreference
        android:key="pref_active_probing_xray_fallback_backend"
        android:title="@string/active_probing_xray_fallback_backend_title"
        android:summary="@string/active_probing_xray_fallback_backend_summary"
        android:defaultValue="vk_turn_wireguard"
        android:entries="@array/active_probing_fallback_backend_entries"
        android:entryValues="@array/active_probing_fallback_backend_values" />

    <SwitchPreferenceCompat
        android:key="pref_active_probing_vk_turn_enabled"
        android:title="@string/active_probing_vk_turn_title"
        android:summary="@string/active_probing_vk_turn_summary"
        android:defaultValue="false" />

    <dev.oneuiproject.oneui.preference.InsetPreferenceCategory />

    <PreferenceCategory
        android:title="@string/active_probing_background_category" />

    <SwitchPreferenceCompat
        android:key="pref_active_probing_background_enabled"
        android:title="@string/active_probing_background_title"
        android:summary="@string/active_probing_background_summary"
        android:defaultValue="false" />

    <dev.oneuiproject.oneui.preference.InsetPreferenceCategory />

    <PreferenceCategory
        android:title="@string/active_probing_parameters_category" />

    <Preference
        android:key="pref_open_active_probing_targets"
        android:title="@string/active_probing_urls_title"
        android:summary="@string/active_probing_urls_open_summary" />

    <EditTextPreference
        android:key="pref_active_probing_interval_seconds"
        android:title="@string/active_probing_interval_title"
        android:dialogTitle="@string/active_probing_interval_title"
        android:defaultValue="20"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="pref_active_probing_timeout_seconds"
        android:title="@string/active_probing_timeout_title"
        android:dialogTitle="@string/active_probing_timeout_title"
        android:defaultValue="2"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
